--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,11 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+gp
+*.EBK
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+
+#https://www0ifunmac0com/
